hphp/test/slow/dot_hack/with_header.hack.expectf
Fatal error: An expression is expected here. in %s/with_header.hack on line 1
